schedule/src/main/resources/openshift/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: m-caj-schedule
  labels:
    app: m-caj-schedule
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: m-caj-schedule
      version: v1
  template:
    metadata:
      labels:
        app: m-caj-schedule
        version: v1
    spec:
      containers:
        - name: m-caj-schedule
          image: 'quay.io/ske/m-caj-schedule:latest'
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
