schedule/src/main/resources/openshift/route.yaml
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: m-caj-schedule
spec:
  host: m-caj-schedule-${STUDENT_ID}.${BASE_DOMAIN}
  to:
    kind: Service
    name: m-caj-schedule
    weight: 100
  port:
    targetPort: 8080
